Tried to Refactor WeblogEntry.java